# Azt3kNet

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/: ARCHITECTURE.md  integration_plan.md  mail-architecture.md
docs/ADRs/: README.md
infra/: dns_bootstrap.py  dyn_updater.py
infra/cloudflare/: README.md  config.example.yml
infra/docker/: .env.example  README.md  docker-compose.yml
infra/docker/mailcow/: README.md  bootstrap.sh  docker-compose.mailcow.yml
infra/docker/postgres-init/: 01-enable-timescaledb.sh  02-configure-memory.sh
infra/migrations/: README.md
infra/migrations/versions/: 20240529_01_agents_table.py
infra/observability/: README.md  prometheus.yml  prometheus.yml.example
scripts/: bootstrap_env.sh  dev_down.sh  dev_up.sh  dns_bootstrap.py  docker-entrypoint.sh  setup_minio.py
src/azt3knet/: __init__.py
src/azt3knet/adapters/: __init__.py
src/fastapi/: __init__.py  testclient.py
src/typer/: __init__.py  testing.py
tests/: conftest.py  test_population_preview.py
tests/golden/: README.md
tests/infra/: test_dns_bootstrap.py  test_dyn_updater.py
tests/integration/: test_agent_repository.py
tests/services/: test_dns_manager.py  test_dns_manager_async.py  test_link_verifier.py  test_mail_service.py  test_mailcow_provisioner.py  test_mailjet_provisioner.py  test_resilient_http_client.py
tests/unit/: test_agent_store.py  test_api.py  test_cli.py  test_compliance_guard.py  test_config.py  test_generator.py  test_mailjet_webhook.py
(+46 files in other folders)
